Page MenuHome GnuPG

Potential memory leak in ecc_encrypt_raw
Closed, ResolvedPublic

Description

https://dev.gnupg.org/source/libgcrypt/browse/master/cipher/ecc.c;0f2c6ce2c9504c6df435463243edaa669e57b109$1421

There is a memory leak in ecc_encrypt_raw in error case.

The x, y, and point R are not deallocated in case of !(flags & PUBKEY_FLAG_DJB_TWEAK) is true.

And there is one more case at:
https://dev.gnupg.org/source/libgcrypt/browse/master/cipher/ecc.c;0f2c6ce2c9504c6df435463243edaa669e57b109$1446