ecc: Fix memory leak in the error case of ecc_encrypt_raw

* cipher/ecc.c (ecc_encrypt_raw): Add proper error cleanup in the main
block.
--

GnuPG-bug-id: 4210
Signed-off-by: Werner Koch <wk@gnupg.org>
(cherry picked from commit e57e75ea517f32109b508113f18298fc69fd1192)